# scs-rclient

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rclone.test.ts  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.agents/: AGENTS.md  development_progress.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature-req.md
.github/actions/setup-build-env/: action.yml
.github/flatpak/: online.anthonyis.scs-rclient.desktop  online.anthonyis.scs-rclient.yml
.github/workflows/: release-scan.yml  tauri-build.yml
src/: App.css  App.tsx  BackgroundWrapper.tsx  Dropdown.tsx  images.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon.xcf
src-tauri/src/: lib.rs  main.rs
src/components/: BaseWebDAVUrl.tsx  CommandExecutor.tsx  CredentialsForm.tsx  Dropdown.tsx  RcloneActions.tsx  RcloneConsole.tsx  SettingsView.tsx  TextInput.tsx
src/hooks/: useRcloneExecution.ts
src/utils/: rclone.ts
test/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rclone.test.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts  wdio.conf.ts
test/specs/: sidecar.e2e.ts
